# ViennaLS

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PythonAPI.md  README.md  THIRD_PARTY_LICENSES.md  format-project.sh  locos_oxidation_diagnostics.csv  pyproject.toml  requirements.txt  setup.py  step_oxidation_deformation.csv  testall.sh  vcpkg.json
Examples/: CMakeLists.txt
Examples/Advection/: Advection.cpp  CMakeLists.txt
Examples/Advection2D/: Advection2D.cpp
Examples/AdvectionPlane/: AdvectionPlane.cpp
Examples/AirGapDeposition/: AirGapDeposition.cpp  AirGapDeposition.py  CMakeLists.txt
Examples/BooleanOperation/: BooleanOperation.cpp  CMakeLists.txt
Examples/BoundaryConditions/: BoundaryConditions.cpp  CMakeLists.txt
Examples/CalculateNormalVectors/: CMakeLists.txt  CalculateNormalVectors.cpp
Examples/Deposition/: CMakeLists.txt  Deposition.cpp  Deposition.py
Examples/Expand/: Expand.cpp
Examples/FastAdvection/: CMakeLists.txt  FastAdvection.cpp  FastAdvection.py
Examples/GeometricAdvection/: CMakeLists.txt  GeometricAdvection.cpp  GeometricAdvection.py
Examples/Make3DSphere/: Make3DSphere.cpp
Examples/MakeSphere/: MakeSphere.cpp
Examples/MultiMaterialAdvection/: MultiMaterialAdvection.cpp
Examples/PatternedSaphireSubstrate/: CMakeLists.txt  PatternedSaphireSubstrate.cpp
Examples/PatternedSubstrate/: CMakeLists.txt  PatternedSubstrate.cpp
Examples/PeriodicBoundary/: CMakeLists.txt  PeriodicBoundary.cpp
Examples/ReadFromFile/: CMakeLists.txt  ReadFromFile.cpp
Examples/SharedLib/: CMakeLists.txt  SharedLib.cpp
Examples/SquareEtch/: CMakeLists.txt  SquareEtch.cpp
Examples/VoidEtching/: CMakeLists.txt  VoidEtching.cpp
Examples/VolumeToLevelSets/: CMakeLists.txt  VolumeToLevelSets.cpp
Python/: CMakeLists.txt  LICENSE  __init__.py.in  pyWrap.cpp
Tests/: CMakeLists.txt
Tests/Advection/: Advection.cpp  CMakeLists.txt
Tests/Advection2D/: Advection2D.cpp  CMakeLists.txt
Tests/AdvectionBenchmark/: AdvectionBenchmark.cpp  CMakeLists.txt
Tests/AdvectionPlane/: AdvectionPlane.cpp  CMakeLists.txt
Tests/BooleanOperation/: BooleanOperation.cpp  CMakeLists.txt
Tests/BooleanOperationExactZero/: BooleanOperationExactZero.cpp  CMakeLists.txt
Tests/BooleanOperationExactZero1/: CMakeLists.txt
Tests/BoundaryConditions/: BoundaryConditions.cpp  CMakeLists.txt
Tests/CalculateCurvatures/: CMakeLists.txt  CalculateCurvatures.cpp
Tests/CalculateNormalVectors/: CMakeLists.txt  CalculateNormalVectors.cpp
Tests/ConvexHull/: CMakeLists.txt  ConvexHull.cpp
Tests/ConvexHull3D/: CMakeLists.txt  ConvexHull3D.cpp
Tests/DiskMesh/: CMakeLists.txt  DiskMesh.cpp
Tests/Expand/: CMakeLists.txt  Expand.cpp
Tests/Extrude/: CMakeLists.txt  Extrude.cpp
Tests/FastAdvect/: CMakeLists.txt  FastAdvect.cpp
Tests/FastAdvectPerformance/: CMakeLists.txt  FastAdvectPerformance.cpp
Tests/FastAdvectTrench/: CMakeLists.txt  FastAdvectTrench.cpp
Tests/FeatureDetection/: CMakeLists.txt  FeatureDetection.cpp
Tests/FileWriter/: CMakeLists.txt  FileWriter.cpp
Tests/FromMesh/: CMakeLists.txt  FromMesh.cpp
Tests/GenerateHoleGeometry/: CMakeLists.txt  GenerateHoleGeometry.cpp
Tests/GeometricAdvect/: CMakeLists.txt  GeometricAdvect.cpp
Tests/GeometricAdvectMask/: CMakeLists.txt  GeometricAdvectMask.cpp
Tests/GeometricAdvectPerformance/: CMakeLists.txt  GeometricAdvectPerformance.cpp
Tests/GeometricAdvectTrench/: CMakeLists.txt  GeometricAdvectTrench.cpp
Tests/HullMesh/: CMakeLists.txt  HullMesh.cpp
Tests/Make3DSphere/: CMakeLists.txt  Make3DSphere.cpp
Tests/MakeBox/: CMakeLists.txt  MakeBox.cpp
Tests/MakeGeometry/: CMakeLists.txt  MakeGeometry.cpp
Tests/MakePlane/: CMakeLists.txt  MakePlane.cpp
Tests/MakeSphere/: CMakeLists.txt  MakeSphere.cpp
Tests/MarkVoidPoints/: CMakeLists.txt  MarkVoidPoints.cpp
Tests/MultiMaterialAdvection/: CMakeLists.txt  MultiMaterialAdvection.cpp
Tests/MultiMaterialEtch/: CMakeLists.txt  MultiMaterialEtch.cpp
Tests/PeriodicBoundary2D/: CMakeLists.txt  PeriodicBoundary2D.cpp
Tests/ReadFromFile/: CMakeLists.txt  ReadFromFile.cpp
Tests/ReadVolume/: CMakeLists.txt  ReadVolume.cpp
Tests/RemoveStrayPoints/: CMakeLists.txt  RemoveStrayPoints.cpp
Tests/RotateMesh/: CMakeLists.txt  RotateMesh.cpp
Tests/Serialize/: CMakeLists.txt  Serialize.cpp
Tests/SmartPointer/: CMakeLists.txt  SmartPointer.cpp
Tests/VisualizationMesh/: CMakeLists.txt  VisualizationMesh.cpp
Tests/VoidDetection/: CMakeLists.txt  VoidDetection.cpp
Wrapping/: CMakeLists.txt  pyWrap.cpp
Wrapping/Python/: CMakeLists.txt  pyWrap.cpp
examples/: CMakeLists.txt
examples/AirGapDeposition/: AirGapDeposition.cpp  AirGapDeposition.py  CMakeLists.txt
examples/Deposition/: CMakeLists.txt  Deposition.cpp  Deposition.py
examples/Epitaxy/: CMakeLists.txt  Epitaxy.cpp  Epitaxy.py
examples/GeometricAdvection/: CMakeLists.txt  GeometricAdvection.cpp  GeometricAdvection.py
examples/LOCOSOxidation/: CMakeLists.txt  LOCOSOxidation.cpp  LOCOSOxidation.py  README.md
examples/Lithography/: CMakeLists.txt  CMakeLists_standalone.txt  Lithography.cpp  polygon.csv
examples/NeuralAdvection/: CMakeLists.txt  NeuralAdvection.cpp  sdf_super_res.pt  train_model.py
examples/PatternedSubstrate/: CMakeLists.txt  PatternedSubstrate.cpp
examples/PeriodicBoundary/: CMakeLists.txt  PeriodicBoundary.cpp
examples/SharedLib/: CMakeLists.txt  SharedLib.cpp
examples/SquareEtch/: CMakeLists.txt  SquareEtch.cpp  SquareEtch.py
examples/StepOxidation/: CMakeLists.txt  README.md  StepOxidation.cpp
examples/VoidEtching/: CMakeLists.txt  VoidEtching.cpp  VoidEtching.py
examples/VolumeToLevelSets/: CMakeLists.txt  VolumeToLevelSets.cpp
python/: CMakeLists.txt  __init__.py  __init__.py.in  generateStubs.py  pyWrap.cpp  pyWrap.hpp
python/scripts/: install_ViennaLS.py
python/tests/: run_all_tests.py
python/viennals/: __init__.pyi  _core.pyi  common.pyi  d2.pyi  d3.pyi
python/viennals2d/: __init__.pyi  viennals2d.pyi
python/viennals3d/: __init__.pyi  viennals3d.pyi
tests/: CMakeLists.txt  lsan_suppressions.txt
(+1293 files in other folders)
