[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
version = "4.3.0"
name = "ViennaLS"
readme = "README.md"
license = {file = "LICENSE"}
description = "A high performance sparse level set library"

[project.urls]
Homepage = "https://viennatools.github.io/ViennaLS/"
Documentation = "https://viennatools.github.io/ViennaLS/"
Repository = "https://github.com/ViennaTools/ViennaLS"
Issues = "https://github.com/ViennaTools/ViennaLS/issues"

[tool.scikit-build]
build-dir = "build"
cmake.args = ["-DVIENNALS_BUILD_PYTHON=ON"]
wheel.packages = ["python/viennals3d", "python/viennals2d"]